--- a/package.json
+++ b/package.json
@@ -16,18 +16,26 @@
   },
   "dependencies": {
     "@payloadcms/db-mongodb": "latest",
+    "@payloadcms/live-preview-react": "^3.19.0",
     "@payloadcms/next": "latest",
     "@payloadcms/payload-cloud": "latest",
     "@payloadcms/richtext-lexical": "latest",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/postcss": "^4.0.0",
+    "class-variance-authority": "^0.7.1",
     "cross-env": "^7.0.3",
+    "geist": "^1.3.1",
     "graphql": "^16.8.1",
+    "lucide-react": "^0.474.0",
     "next": "15.1.5",
     "payload": "latest",
+    "payload-admin-bar": "^1.0.6",
     "postcss": "^8.5.1",
+    "prism-react-renderer": "^2.4.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "sharp": "0.32.6",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
