--- a/package.json
+++ b/package.json
@@ -15,15 +15,21 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@payloadcms/db-mongodb": "latest",
     "@payloadcms/live-preview-react": "^3.19.0",
     "@payloadcms/next": "latest",
     "@payloadcms/payload-cloud": "latest",
+    "@payloadcms/plugin-redirects": "^3.19.0",
+    "@payloadcms/plugin-search": "^3.19.0",
     "@payloadcms/richtext-lexical": "latest",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "cross-env": "^7.0.3",
+    "framer-motion": "^12.0.6",
     "geist": "^1.3.1",
     "graphql": "^16.8.1",
     "lucide-react": "^0.474.0",
@@ -36,7 +42,8 @@
     "react-dom": "19.0.0",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
