--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "graphql": "^16.8.1",
     "lucide-react": "^0.474.0",
     "next": "15.1.5",
+    "node-fetch": "^3.3.2",
     "payload": "latest",
     "payload-admin-bar": "^1.0.6",
     "postcss": "^8.5.1",
