--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@payloadcms/plugin-redirects": "^3.19.0",
     "@payloadcms/plugin-search": "^3.19.0",
     "@payloadcms/richtext-lexical": "latest",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
