--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.16",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "cross-env": "^7.0.3",
     "framer-motion": "^12.0.6",
@@ -42,6 +43,7 @@
     "postcss": "^8.5.1",
     "prism-react-renderer": "^2.4.1",
     "react": "19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.6.0",
