--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "sharp": "0.32.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.0.0",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
