--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "15.1.5",
     "next-sitemap": "^4.2.3",
     "node-fetch": "^3.3.2",
+    "p-limit": "^6.2.0",
     "payload": "latest",
     "payload-admin-bar": "^1.0.6",
     "postcss": "^8.5.1",
