--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "geist": "^1.3.1",
     "graphql": "^16.8.1",
     "lucide-react": "^0.474.0",
+    "luxon": "^3.5.0",
     "next": "15.1.5",
     "next-sitemap": "^4.2.3",
     "node-fetch": "^3.3.2",
@@ -62,6 +63,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^22.5.4",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
