--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.0.6",
     "geist": "^1.3.1",
     "graphql": "^16.8.1",
