--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "sharp": "0.32.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.0.0",
-    "xlsx": "^0.18.5",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
