--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@payloadcms/live-preview-react": "^3.19.0",
     "@payloadcms/next": "latest",
     "@payloadcms/payload-cloud": "latest",
+    "@payloadcms/plugin-import-export": "^3.35.1",
     "@payloadcms/plugin-redirects": "^3.19.0",
     "@payloadcms/plugin-search": "^3.19.0",
     "@payloadcms/richtext-lexical": "latest",
@@ -45,11 +46,11 @@
     "graphql": "^16.8.1",
     "lucide-react": "^0.474.0",
     "luxon": "^3.5.0",
-    "next": "15.1.5",
+    "next": "15.3.1",
     "next-sitemap": "^4.2.3",
     "node-fetch": "^3.3.2",
     "p-limit": "^6.2.0",
-    "payload": "latest",
+    "payload": "^3.35.1",
     "payload-admin-bar": "^1.0.7",
     "postcss": "^8.5.1",
     "prism-react-renderer": "^2.4.1",
