--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "cross-env NODE_OPTIONS=--no-deprecation next build",
-    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
+    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev --turbo",
     "dev:prod": "cross-env NODE_OPTIONS=--no-deprecation rm -rf .next && pnpm build && pnpm start",
     "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
@@ -23,14 +23,14 @@
     "@fullcalendar/resource": "^6.1.15",
     "@fullcalendar/resource-daygrid": "^6.1.15",
     "@fullcalendar/resource-timeline": "^6.1.15",
-    "@payloadcms/db-mongodb": "latest",
-    "@payloadcms/live-preview-react": "^3.19.0",
-    "@payloadcms/next": "latest",
-    "@payloadcms/payload-cloud": "latest",
-    "@payloadcms/plugin-import-export": "^3.35.1",
-    "@payloadcms/plugin-redirects": "^3.19.0",
-    "@payloadcms/plugin-search": "^3.19.0",
-    "@payloadcms/richtext-lexical": "latest",
+    "@payloadcms/db-mongodb": "3.42.0",
+    "@payloadcms/live-preview-react": "^3.42.0",
+    "@payloadcms/next": "3.42.0",
+    "@payloadcms/payload-cloud": "3.42.0",
+    "@payloadcms/plugin-import-export": "^3.42.0",
+    "@payloadcms/plugin-redirects": "^3.42.0",
+    "@payloadcms/plugin-search": "^3.42.0",
+    "@payloadcms/richtext-lexical": "3.42.0",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.5",
@@ -50,7 +50,7 @@
     "next-sitemap": "^4.2.3",
     "node-fetch": "^3.3.2",
     "p-limit": "^6.2.0",
-    "payload": "^3.35.1",
+    "payload": "^3.42.0",
     "payload-admin-bar": "^1.0.7",
     "postcss": "^8.5.1",
     "prism-react-renderer": "^2.4.1",
