--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react": "19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
+    "reactflow": "^11.11.4",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.0.0",
