--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "graphql": "^16.8.1",
     "lucide-react": "^0.474.0",
     "luxon": "^3.5.0",
-    "next": "15.3.1",
+    "next": "15.4.7",
     "next-sitemap": "^4.2.3",
     "node-fetch": "^3.3.2",
     "p-limit": "^6.2.0",
@@ -54,6 +54,7 @@
     "payload-admin-bar": "^1.0.7",
     "postcss": "^8.5.1",
     "prism-react-renderer": "^2.4.1",
+    "puppeteer": "^24.27.0",
     "react": "19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0",
