feat: add virtual scrolling to SitesBlock component
- Implemented virtualization for the SitesBlock table using `@tanstack/react-virtual`.
- Refactored component for improved performance and readability.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-virtual": "^3.13.12",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "cross-env": "^7.0.3",
