--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tanstack/react-virtual": "^3.13.12",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.0.6",
@@ -76,6 +77,7 @@
     "eslint": "^9.16.0",
     "eslint-config-next": "15.1.5",
     "prettier": "^3.4.2",
+    "tw-animate-css": "^1.4.0",
     "typescript": "5.7.3"
   },
   "engines": {
