--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@faceless-ui/modal": "^3.0.0",
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
@@ -23,14 +24,14 @@
     "@fullcalendar/resource": "^6.1.15",
     "@fullcalendar/resource-daygrid": "^6.1.15",
     "@fullcalendar/resource-timeline": "^6.1.15",
-    "@payloadcms/db-mongodb": "3.42.0",
-    "@payloadcms/live-preview-react": "^3.42.0",
-    "@payloadcms/next": "3.42.0",
-    "@payloadcms/payload-cloud": "3.42.0",
-    "@payloadcms/plugin-import-export": "^3.42.0",
-    "@payloadcms/plugin-redirects": "^3.42.0",
-    "@payloadcms/plugin-search": "^3.42.0",
-    "@payloadcms/richtext-lexical": "3.42.0",
+    "@payloadcms/db-mongodb": "3.67.0",
+    "@payloadcms/live-preview-react": "3.67.0",
+    "@payloadcms/next": "3.67.0",
+    "@payloadcms/payload-cloud": "3.67.0",
+    "@payloadcms/plugin-import-export": "3.67.0",
+    "@payloadcms/plugin-redirects": "3.67.0",
+    "@payloadcms/plugin-search": "3.67.0",
+    "@payloadcms/richtext-lexical": "3.67.0",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.1",
@@ -50,11 +51,11 @@
     "graphql": "^16.8.1",
     "lucide-react": "^0.474.0",
     "luxon": "^3.5.0",
-    "next": "15.4.7",
+    "next": "15.5.7",
     "next-sitemap": "^4.2.3",
     "node-fetch": "^3.3.2",
     "p-limit": "^6.2.0",
-    "payload": "^3.42.0",
+    "payload": "3.67.0",
     "payload-admin-bar": "^1.0.7",
     "postcss": "^8.5.1",
     "prism-react-renderer": "^2.4.1",
