--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fullcalendar/resource": "^6.1.15",
     "@fullcalendar/resource-daygrid": "^6.1.15",
     "@fullcalendar/resource-timeline": "^6.1.15",
+    "@payloadcms/admin-bar": "^3.70.0",
     "@payloadcms/db-mongodb": "3.70.0",
     "@payloadcms/live-preview-react": "3.70.0",
     "@payloadcms/next": "3.70.0",
@@ -51,17 +52,16 @@
     "graphql": "^16.8.1",
     "lucide-react": "^0.474.0",
     "luxon": "^3.5.0",
-    "next": "15.5.9",
+    "next": "15.4.10",
     "next-sitemap": "^4.2.3",
     "node-fetch": "^3.3.2",
     "p-limit": "^6.2.0",
     "payload": "3.70.0",
-    "payload-admin-bar": "^1.0.7",
     "postcss": "^8.5.1",
     "prism-react-renderer": "^2.4.1",
-    "react": "19.0.0",
+    "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "19.0.0",
+    "react-dom": "19.1.0",
     "reactflow": "^11.11.4",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.6.0",
@@ -73,8 +73,8 @@
     "@eslint/eslintrc": "^3.2.0",
     "@types/luxon": "^3.4.2",
     "@types/node": "^22.5.4",
-    "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3",
+    "@types/react": "19.2.1",
+    "@types/react-dom": "19.2.1",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.1.5",
     "prettier": "^3.4.2",
