--- a/package.json
+++ b/package.json
@@ -10,17 +10,10 @@
     "dev:prod": "cross-env NODE_OPTIONS=--no-deprecation rm -rf .next && pnpm build && pnpm start",
     "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
-    "generate:types": "pnpm run generate:types:cloudflare && pnpm run generate:types:payload",
-    "generate:types:cloudflare": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
-    "generate:types:payload": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
+    "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
-    "typecheck": "tsc --noEmit",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
-    "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
-    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview --env=$CLOUDFLARE_ENV",
-    "deploy": "pnpm run deploy:database && pnpm run deploy:app",
-    "deploy:app": "opennextjs-cloudflare build --env=$CLOUDFLARE_ENV && opennextjs-cloudflare deploy --env=$CLOUDFLARE_ENV",
-    "deploy:database": "cross-env NODE_ENV=production PAYLOAD_SECRET=ignore payload migrate && wrangler d1 execute D1 --command 'PRAGMA optimize' --env=$CLOUDFLARE_ENV --remote"
+    "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
     "@faceless-ui/modal": "^3.0.0",
@@ -31,9 +24,7 @@
     "@fullcalendar/resource": "^6.1.15",
     "@fullcalendar/resource-daygrid": "^6.1.15",
     "@fullcalendar/resource-timeline": "^6.1.15",
-    "@opennextjs/cloudflare": "^1.15.1",
-    "@payloadcms/admin-bar": "3.70.0",
-    "@payloadcms/db-d1-sqlite": "3.70.0",
+    "@payloadcms/admin-bar": "^3.70.0",
     "@payloadcms/db-mongodb": "3.70.0",
     "@payloadcms/live-preview-react": "3.70.0",
     "@payloadcms/next": "3.70.0",
@@ -42,7 +33,6 @@
     "@payloadcms/plugin-redirects": "3.70.0",
     "@payloadcms/plugin-search": "3.70.0",
     "@payloadcms/richtext-lexical": "3.70.0",
-    "@payloadcms/storage-r2": "3.70.0",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.1",
@@ -89,17 +79,9 @@
     "eslint-config-next": "15.1.5",
     "prettier": "^3.4.2",
     "tw-animate-css": "^1.4.0",
-    "typescript": "5.7.3",
-    "wrangler": "^4.60.0"
+    "typescript": "5.7.3"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
-  },
-  "cloudflare": {
-    "bindings": {
-      "PAYLOAD_SECRET": {
-        "description": "Generate a random string using `openssl rand -hex 32`"
-      }
-    }
   }
 }
