--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "@fullcalendar/resource": "^6.1.15",
     "@fullcalendar/resource-daygrid": "^6.1.15",
     "@fullcalendar/resource-timeline": "^6.1.15",
-    "@payloadcms/admin-bar": "^3.70.0",
-    "@payloadcms/db-mongodb": "3.70.0",
-    "@payloadcms/live-preview-react": "3.70.0",
-    "@payloadcms/next": "3.70.0",
-    "@payloadcms/payload-cloud": "3.70.0",
-    "@payloadcms/plugin-import-export": "3.70.0",
-    "@payloadcms/plugin-redirects": "3.70.0",
-    "@payloadcms/plugin-search": "3.70.0",
-    "@payloadcms/richtext-lexical": "3.70.0",
+    "@payloadcms/admin-bar": "^3.75.0",
+    "@payloadcms/db-mongodb": "3.75.0",
+    "@payloadcms/live-preview-react": "3.75.0",
+    "@payloadcms/next": "3.75.0",
+    "@payloadcms/payload-cloud": "3.75.0",
+    "@payloadcms/plugin-import-export": "3.75.0",
+    "@payloadcms/plugin-redirects": "3.75.0",
+    "@payloadcms/plugin-search": "3.75.0",
+    "@payloadcms/richtext-lexical": "3.75.0",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.1",
@@ -52,11 +52,12 @@
     "graphql": "^16.8.1",
     "lucide-react": "^0.474.0",
     "luxon": "^3.5.0",
-    "next": "15.4.10",
+    "next": "16.1.6",
     "next-sitemap": "^4.2.3",
+    "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "p-limit": "^6.2.0",
-    "payload": "3.70.0",
+    "payload": "3.75.0",
     "postcss": "^8.5.1",
     "prism-react-renderer": "^2.4.1",
     "react": "19.1.0",
@@ -64,6 +65,7 @@
     "react-dom": "19.1.0",
     "reactflow": "^11.11.4",
     "sharp": "0.32.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.0.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
